--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
+    "vue-draggable": "^2.0.6",
+    "vue-feather-icon": "^1.2.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
